update ui home and nav, styling the spaces components

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import '_slick.scss';
 @import '_slickTheme.scss';
 @import '_registerAndLogin.scss';
+@import 'spaceIndexView.scss';
+@import '_spaceCategories.scss';
 
 
 .header {
